unit test platform begin

--- a/assets/platforms.yml
+++ b/assets/platforms.yml
@@ -1,7 +1,8 @@
-any:
-	- windows:
-		- win32
-		- x64
-	- unix:
-		- osx
-		- linux
+platforms:
+  all:
+    windows:
+      - win32
+      - x64
+    unix:
+      - linux
+      - osx
