--- a/assets/platforms.yml
+++ b/assets/platforms.yml
@@ -1,8 +1,8 @@
 platforms:
   all:
     windows:
-      - win32
-      - x64
+      win32:
+      x64:
     unix:
-      - linux
-      - osx
+      linux:
+      osx:
