Cleanup, Change to toml for user config to improve readability

--- a/assets/platforms.yml
+++ b/assets/platforms.yml
@@ -1,10 +1,5 @@
-name: any
-children:
-  - name: windows
-    children:
-    - name: win32
-    - name: x64
-  - name: unix
-    children:
-    - name: linux
-    - name: osx
+any:
+  - windows
+  - unix:
+    - osx
+    - linux
