--- a/assets/templates/packages.toml
+++ b/assets/templates/packages.toml
@@ -4,8 +4,13 @@ name = '[Package name]'
 # Version of the package, should follow the format major.minor.patch[.other]
 version = '[Package Version]'
 
+homepage = '[http://youhomepage.com]'
+
 # List of the authors
 authors = ['Your Name <you@example.com>']
+
+# List of the tags
+tags = ['Some', 'Tag']
 
 #Short description
 short_description = '[Short Description]'
