--- a/test/demo_package/wow.toml
+++ b/test/demo_package/wow.toml
@@ -1,11 +1,16 @@
 # Name of the package, must contain only letters, digits and _
-name = '[Package name]'
+name = 'test_package'
+
+homepage = 'http://example.com'
 
 # Version of the package, should follow the format major.minor.patch[.other]
 version = '[Package Version]'
 
 # List of the authors
 authors = ['Your Name <you@example.com>']
+
+# List of the tags
+tags = ['Some', 'Tag']
 
 #Short description
 short_description = '[Short Description]'
