--- a/test/demo_package/wow.toml
+++ b/test/demo_package/wow.toml
@@ -25,10 +25,10 @@ description = '[Description]'
 #   Readme.md       => Will include the Readme.md file
 #   bin/myexe       => Will include the bin/myexe file
 #   src/**/*.rb     => Will include all the rb files in the src directory
-files = ['bin/*.*', 'lib/*.*']
+files = ['bin/*', 'lib/*']
 
 # List of files to exclude.(Same format as files)
-files_exclude = ['devonly.txt']
+files_excluded = ['lib/util.rb']
 
 # List of executables(Relative to the root of the package) The file will be linked in the WOW bin directory which should be visible by the system path.
 executables = ['[Executables]']
