--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,13 @@ Style/ClassAndModuleChildren:
 Style/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 
+Metrics/MethodLength:
+  Description: Avoid methods longer than 25 lines of code.
+  Enabled: true
+  CountComments: false
+  Max: 25
+
+
 AllCops:
   Exclude:
     - 'spec/**/*'
