--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ notifications:
 
 addons:
   code_climate:
-    repo_key: 138fb1975b1869c4bb92f1bcc1c6c5f13668fb47e162e8e04674756185a2b92a
+    repo_token: 138fb1975b1869c4bb92f1bcc1c6c5f13668fb47e162e8e04674756185a2b92a
